<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".onboard.onboard3" >

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/textViewTitOnb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="88dp"

            android:layout_marginEnd="50dp"
            android:paddingLeft="@dimen/buton_edit_text_space"
            android:paddingRight="@dimen/buton_edit_text_space"
            android:text="@string/titleonboard"
            android:textAlignment="inherit"
            android:textColor="@color/colorSecundaryText"
            android:textSize="@dimen/onboard_text_size_inicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewT"
            android:layout_width="220dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitOnb3"
            app:srcCompat="@drawable/logosud" />

        <ImageView
            android:id="@+id/ima_onb3"
            android:layout_width="410dp"
            android:layout_height="260dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewT"
            app:srcCompat="@drawable/onb3" />


        <TextView
            android:id="@+id/textViewOnT3"
            android:layout_width="289dp"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/onbot3"
            android:textColor="@color/Accent"
            android:textSize="@dimen/onboard_text_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ima_onb3" />


        <TextView
            android:id="@+id/textViewOnM3"
            android:layout_width="347dp"
            android:layout_height="61dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/onbom3"
            android:textColor="@color/colorSecundaryText"
            android:textSize="@dimen/onboard_text_size_descp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOnT3" />


        <Button
            android:id="@+id/buttonAnt3"
            android:layout_width="120dp"
            android:layout_height="@dimen/button_onboard"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"

            android:layout_marginTop="48dp"
            android:background="@drawable/button_onboard"
            android:text="@string/button_ant"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/button_onboard_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOnM3" />

        <Button
            android:id="@+id/buttonSig3"
            android:layout_width="120dp"
            android:layout_height="@dimen/button_onboard"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"

            android:layout_marginRight="38dp"
            android:background="@drawable/button_onboard"
            android:text="@string/button_ing"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/button_onboard_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintStart_toEndOf="@+id/buttonAnt3"
            app:layout_constraintTop_toBottomOf="@+id/textViewOnM3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>