<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".onboard.onboard1" >

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/textViewTitOnb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="88dp"

            android:layout_marginEnd="50dp"
            android:paddingLeft="@dimen/buton_edit_text_space"
            android:paddingRight="@dimen/buton_edit_text_space"
            android:text="@string/titleonboard"
            android:textAlignment="inherit"
            android:textColor="@color/colorSecundaryText"
            android:textSize="@dimen/onboard_text_size_inicio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewT"
            android:layout_width="220dp"
            android:layout_height="49dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitOnb"
            app:srcCompat="@drawable/logosud" />

        <ImageView
            android:id="@+id/ima_onb2"
            android:layout_width="342dp"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewT"
            app:srcCompat="@drawable/onb1" />

        <TextView
            android:id="@+id/textViewOnT1"
            android:layout_width="289dp"
            android:layout_height="57dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/onbot1"
            android:textColor="@color/Accent"
            android:textSize="@dimen/onboard_text_size_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ima_onb2" />


        <TextView
            android:id="@+id/textViewOnM1"
            android:layout_width="289dp"
            android:layout_height="66dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:text="@string/onbom1"
            android:textColor="@color/colorSecundaryText"
            android:textSize="@dimen/onboard_text_size_descp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOnT1" />


        <Button
            android:id="@+id/buttonSig"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_onboard"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="48dp"

            android:background="@drawable/button_onboard"
            android:text="@string/button_sig"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/button_onboard_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOnM1" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>